--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,22 +6,37 @@ on:
       - main
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12
+      - name: Checkout master
+        uses: actions/checkout@master
+
+      - name: Update SHA
+        run: echo $GITHUB_SHA > $GITHUB_WORKSPACE/_meta
+
+      - name: Build Docker image
+        run: docker build -t registry.digitalocean.com/nintendo-center-registry/game-collection:$(echo $GITHUB_SHA | head -c7) .
+
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
         with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "n-center-game-collection"
-          heroku_email: "ilya@zobenko.ru"
-  publish:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@master
-      - name: Publish to Registry
-        uses: elgohr/Publish-Docker-Github-Action@master
-        with:
-          name: he110/game-collection
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+
+      - name: Login to registry with a short-lived credentials
+        run: doctl registry login --expiry-seconds 600
+
+      - name: Push image to the registry
+        run: docker push registry.digitalocean.com/nintendo-center-registry/game-collection:$(echo $GITHUB_SHA | head -c7)
+
+      - name: Update deployment file
+        run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|registry.digitalocean.com/nintendo-center-registry/game-collection:'${TAG}'|' $GITHUB_WORKSPACE/.github/deployment.yml
+
+      - name: Save DigitalOcean kubeconfig with short-lived credentials
+        run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 nc-k8s
+
+      - name: Deploy to DigitalOcean Kubernetes
+        run: kubectl apply -f $GITHUB_WORKSPACE/.github/deployment.yml
+
+      - name: Verify deployment
+        run: kubectl rollout status deployment/game-collection --timeout 10s
